# ai-trading-system

./: .env.example  .gitignore  Dockerfile  FINAL_VERIFICATION_REPORT.md  FIXES_APPLIED_20251003.md  INVESTIGATION_FINDINGS.md  README.md  SESSION_COMPLETE.md  agent_profile_1758879208.json  agent_profile_1758879314.json  agent_profile_1758896674.json  agent_profile_1758898692.json  agent_profile_1758899129.json  agent_profile_1758904369.json  apply_portfolio_fix.py  apply_risk_fix.py  cli.py  data_pipeline_profile_1758878346.json  docker-compose.yml  e2e_test_results_post_fix.json  final_test.json  llm_client_profile_1758878921.json  main.py  orchestrator_profile_1758880681.json  orchestrator_profile_1758880746.json  orchestrator_profile_1758880843.json  orchestrator_profile_1758889764.json  performance_report.md  pyproject.toml  signal_generation_test_analysis.md  signal_generation_test_report_20251002_134749.json  test_after_restart.json  test_e2e_post_fix.py  test_response_investigation.json  test_statistical_demo.py  test_volume_demo.py  todo_update.txt  update_docs.py
articles/: Building AI hedge Fund - Part 1 - Tech Stack Details and Overview.docx
docs/: API.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_PROVIDER_OPTIMIZATION_STRATEGY.md  LOCAL_SIGNAL_GENERATION_FRAMEWORK.md  ROADMAP.md  TECHNICAL_INDICATORS_PLAN.md  TODO.md  TRIGGER_SYSTEM.md
examples/: signal_generation_example.py  watchlist.txt
scripts/: deploy.sh  performance_dashboard.py  profile_agents.py  profile_data_pipeline.py  profile_llm_client.py  profile_orchestrator.py  test_individual_providers.py  test_providers.py  test_trigger_system_safely.py  test_unified_provider.py  trigger_system_demo.py  validate_trigger_data.py
sessionSummary/: 20250908.md  20250925.md  20251007.md  20251013.md
startingDocs/: comprehensive-technical-plan.md  implementation_agent_base_example.py  implementation_data_pipeline_example.py  (+5 more)
tests/: __init__.py  (+2 more)
(+107 files in other folders)
